--- a/Exam2_PSD_TO_BOOTSTRAP/css/styles.css
+++ b/Exam2_PSD_TO_BOOTSTRAP/css/styles.css
@@ -639,3 +639,41 @@ body {
 }
 
 /*FOOTER ENDS*/
+
+
+/*countdown starts*/
+.countdown-timer-wrapper {
+  border-radius: 5px;
+  background-color: rgba(237, 20, 91, 0.4);
+  margin-bottom: 20px;
+  max-width: 300px;
+  margin: 20px auto;
+}
+
+.timer {
+  padding: 10px;
+  text-align: center;
+  padding-top: 15px;
+  /*  background-color: #ed145b;*/
+
+}
+
+.timer .timer-wrapper {
+  display: inline-block;
+  width: 60px;
+  height: 50px;
+}
+
+.timer .timer-wrapper .time {
+  font-size: 28px;
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.timer .timer-wrapper .text {
+  font-size: 12px;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+
+/*countdown ends*/
